[package]
name = "o1"
version = "0.4.9"
description = "O(1) complexity, minimum allocations and concurrency friendly collection of data structures and algorithms"
authors = ["Alexey Voznyuk <me@swizard.info>"]

[features]
default = ["with-rayon"]
with-rayon = ["rayon"]

[dependencies]
rayon = { version = "1.0", optional = true }

[dev-dependencies]
rand = "0.5"
